--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div id="repeat" class="button"><i class="bi bi-repeat"></i></div>
         </div>
     </div>
+    <script src="/script.js"></script>
 
 </body>
 </html>
