--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="music-container">
         <h4 id="playlist-title">Player de música no estilo Spotify</h4>
         <img id="cover" src="/imagens/capa-timmies.jpg" alt="capa de disco">
+        <audio id='audio' src="/songs/timmies - loosing interest (ft. shiloh).mp3"></audio>
         <div id="below-cover">
             <div id="song-info">
                 <div id="song-name">Nome da múscica</div>
